# jrat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  copy_installer_binaries.sh
UI_TESTING/: CMakeLists.txt  TEST.cpp  TEST.h  main.cpp
common/: CMakeLists.txt
common/TESTING/: CMakeLists.txt  TEST.cpp  TEST.h  main.cpp
common/include/: common.h  supported_types.h
common/include/common/: entrypoint.h  image_to_byte.h  stringutil.h  supported_files.h  supported_types.h  textbox.h  ui_framework.h  window.h
common/resources/: JetBrainsMono.h
common/src/: entrypoint.cpp  main.cpp  ui_framework.cpp  window.cpp
convertinator/: CMakeLists.txt  main.cpp  stringutil.h
cropinator/: CMakeLists.txt  main.cpp  ui.cpp  ui.h
demo/: CMakeLists.txt  main.cpp
erasinator/: CMakeLists.txt  main.cpp
flipinator/: CMakeLists.txt  main.cpp
installer/: CMakeLists.txt  convertinator.rc  installer.manifest  main.cpp  registry_key.cpp  registry_key.h  resources.cpp  resources.h  resources.rc  ui.cpp  ui.h
resizinator/: CMakeLists.txt  main.cpp  resize_ui.cpp  resize_ui.h  resizinator.cpp  resizinator.h  test.cpp  test.h  window_example.h
rotatinator/: CMakeLists.txt  main.cpp  rotate_ui.cpp  rotate_ui.h  rotatinator.cpp  rotatinator.h
